# HashCashUtilities

./: LICENSE  README.md  hashcashcli.cabal  stack.yaml
app/: Main.hs
src/: HashCash.hs  Testy.hs
