name:                hashcashcli
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/maple-shaft/hashcashcli#readme
license:             BSD3
license-file:        LICENSE
author:              Dustin Briscoe
maintainer:          alain_us@hotmail.com
copyright:           Copyright (c) 2017 Dustin Briscoe
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HashCash
  build-depends:       base >= 4.7 && < 5
                     , time
                     , random
                     , strict
                     , cryptonite
                     , bytestring-conversion
                     , bytestring
                     , memory
                     , base64-bytestring
                     , utf8-string
                     , binary-strict
                     , split
  default-language:    Haskell2010

executable hashcashcli-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hashcashcli
  default-language:    Haskell2010

test-suite hashcashcli-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hashcashcli
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/maple-shaft/hashcashcli
